# spherical_code_pmmh

./: .gitignore  CMakeLists.txt  Code_options.md  MainMHD  Makefile  README.md  README.txt  User_manual.md
python/: plot_data_equatorial_plane.py  plot_data_merid_plane.py  plot_data_mid_gap.py
src/: MainMHD.f90  iterative_solver_test.f90  spherical_code_pmmh.f90
src/include/: shtns.f03
src/mods/: mod_ActNewtonSolver.f90  mod_CommandLineParser.f90  mod_ExplicitTerms.f90  mod_GlobalVars.f90  mod_IterativeSolvers.f90  mod_IterativeSolvers_test.f90  mod_Matrices.f90  mod_NewtonSolver.f90  mod_Output.f90  mod_PrecompSH.f90  mod_PrecompXY.f90  mod_Tchebyshev.f90  mod_TimeStep.f90  mod_TimeSteppingSolver.f90  mod_init.f90  mod_read.f90  mod_tools.f90
test_iterative_solvers/: A1.txt  A10.txt  BiCGSTAB_evals.txt  BiCGSTAB_residual.txt  GMRES_residual.txt  IDRs_evals.txt  IDRs_residual.txt  b1.txt  b10.txt  b100.txt  draw_residuals.asv  draw_residuals.m
